# monitor-brightness-controller

./: Cargo.toml  README.md  application.manifest  build.rs  icon.xcf  output  resources.rc  resources.res
src/: guid.rs  icon.rs  main.rs  monitor.rs  power.rs  resources.rs  window.rs  xaml.rs
src/xaml/: image.rs  mod.rs
