[package]
name = "win-ui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.28"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_RichEdit",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT_Xaml",
    "Foundation_Collections",
    "UI_Xaml_Hosting",
    "UI_Xaml_Controls",
    "UI_Xaml_Controls_Primitives",
    "UI_Xaml_Media"
]