[package]
name = "monitor-brightness-controller"
version = "0.0.0"
edition = "2021"

[profile.release]
lto = true

[dependencies.windows]
# XAML was deprecated in 0.38
version = "0.37"
features = [
    "Foundation",
    "Foundation_Collections",
    "Graphics_Imaging",
    "UI_Text",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls_RichEdit",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Xaml",
    "UI_Xaml_Hosting",
    "UI_Xaml_Controls",
    "UI_Xaml_Controls_Primitives",
    "UI_Xaml_Media",
    "UI_Xaml_Media_Imaging",
    "Storage_Streams"
]